--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon Social Services Solutions, Inc.</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
     </section>
     <div class="hero"></div>
     <section class="content">
-        <div class="search-engine-optimization">
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="laptop, cup of coffee and a notebook" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
