--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon Social Services Solutions, Inc.</title>
+    <title>Horiseon Social Services Solutions, Inc. Website</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             </ul>
         </div>
     </section>
-    <div class="hero"></div>
+    <figure class="hero"></figure>
     <section class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="laptop, cup of coffee and a notebook" class="float-left" />
